tests/baselines/reference/checkJsdocReturnTag2(strict=true).errors.txt
returns.js(6,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== returns.js (1 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
     */
    function f() {
        return 5;
        ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    }
    
    /**
     * @returns {string | number} This comment is not currently exposed
     */
    function f1() {
        return 5 || true;
    }
    